<resources>
    <string name="app_name">Health-Monitoring-App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_settings">Bluetooth Settings</string>
    <string name="nav_info">Information</string>
    <string name="nav_logout">Logout</string>

    <string name="navigation_drawer_open">Open Navgiation drawer</string>
    <string name="navigation_drawer_close">Close Navgiation drawer</string>
    <string name="nav_gp_profile">GP Information</string>
    <string name="profile_submitEdit_button">Submit New Infomation</string>
    <string name="gp_profile_edit_button">Edit Information</string>
    <string name="reg_label">Registration</string>
    <string name="profile_enableEdit_button">Enable Edit</string>
    <string name="cancel">Cancel</string>
    <string name="callGp">Call your GP</string>
    <string name="dialog_title">Contact GP</string>
    <string name="dialog_message">Contact your GP to change your GP information</string>
    <string name="nav_register">Register New Client</string>
    <string name="nav_head_email">User\'s Email</string>
    <string name="nav_head_username">User\'s UserName</string>

<!--    Information Strings-->
    <string name="info_appExpand">This app is for patients of health clinics that have illnesses that needs to be monitored at home. This application collects information from a health device and calculate the Early Warning Score to find out the health condition of the patient.</string>
    <string name="info_ewsExpand">Early Warning Score is a system that calculate the health condition of a patient based on the values that are recieved from the health device.\nThe Early Warning Score is calculated from the patients Heart Rate, Temperature, Respiratory Rate, Oxygen Saturation, Level of Consciousness.\n\nClick on the Data information section to read more about these values.</string>
    <string name="info_dataExpand">The data that are collected from the health device are:\nHeart Rate\n   The heart rate is pulse of the patient. The health device collects the user(s) total heart beat for a total time of 30 seconds and multiplying that by 2.\n\nRespiratory Rate\n   Respiratory Rate is the breathing rate of the patient. This is the total breathe rate per minute. The normal breathe rate per minute is between 12 to 20 breathes.\n\nOxygen Saturation\n   Oxygen Saturation is the amount of oxygen that is in the patient(s) bloodstream. The normal range of oxygen saturation for adults is between 94 to 99 percent.\n\nLevel of Consciousness\n   Level of Consciousness is the consciousness of whether a patient is conscious by Responsive by pain, Unresponsive, Responsive to voice or Alert.</string>
    <string name="info_contactExpand">If you have any questions, complaints or concerns about the app, feel free to send us an email:\nvqq@autuni.ac.nz</string>

<!--    Mail String-->
    <string name="email_mediumLvl_subject">URGENT MEDIUM LEVEL: PATIENT EWS IS MEDIUM LEVEL</string>
    <string name="email_mediumLvl_message">Patient EWS Level is Medium.\n Please contact them to check on them\n\n Patient information is:\n</string>
    <string name="email_highLvl_subject">URGENT HIGH LEVEL: PATIENT EWS IS HIGH LEVEL</string>
    <string name="email_highLvl_message">Patient EWS Level is High.\n Please contact them immediately\n Patient information is:\n</string>
</resources>
